# Copilot_MOSTE

./: .gitignore  README.md  install.ps1
MCPservers/auto-eff-converter/: README.md  pyproject.toml  requirements.txt
MCPservers/auto-eff-converter/auto_eff_converter/: __init__.py  analyzer_driver.py  config.py  server.py  st4_index.py
MCPservers/frontend-data-manager-te/: Frontend_Data_Manager_for_TE.md  README.md  pyproject.toml  requirements.txt
MCPservers/frontend-data-manager-te/fe_data_manager/: __init__.py  analysis.py  config.py  eff_parser.py  report.py  server.py
agents/: super-mos-te.agent.md  super-te.agent.md
agents/knowledge/: ets-manual-reference.md  ets-manual.txt
instructions/: SWA-style.instructions.md
prompts/: new-testmodule.prompt.md
skills/HIB-Schematic-Shower/: SKILL.md
skills/commitdetails-update-track-all-changes/: SKILL.md
skills/flatten-store-relayconfig-oldhib-commentout/: SKILL.md
skills/relay-status-logger/: SKILL.md
skills/resource-status-logger/: SKILL.md
